// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormulaInput suggests when the user starts typing 1`] = `
<Component>
  <FormulaInput
    getSuggestions={[Function]}
    onChange={[Function]}
    value=""
  >
    <FormControl
      autoComplete="off"
      name="formula"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      value=""
    >
      <input
        autoComplete="off"
        className="form-control"
        name="formula"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        value=""
      />
    </FormControl>
  </FormulaInput>
</Component>
`;

exports[`FormulaInput suggests when the user starts typing 2`] = `
<Component>
  <FormulaInput
    getSuggestions={[Function]}
    onChange={[Function]}
    value="a"
  >
    <FormControl
      autoComplete="off"
      name="formula"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      value="a"
    >
      <input
        autoComplete="off"
        className="form-control"
        name="formula"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        value="a"
      />
    </FormControl>
    <Suggestions
      apply={[Function]}
      selected={null}
      suggestions={
        Array [
          "Alpha",
          "Bravo",
          "Charlie",
        ]
      }
    >
      <ListGroup>
        <ForwardRef
          as="div"
          className="list-group"
          onSelect={[Function]}
        >
          <div
            className="list-group"
            onKeyDown={[Function]}
          >
            <ListGroupItem
              action={true}
              active={false}
              disabled={false}
              key="Alpha"
              onClick={[Function]}
            >
              <ForwardRef
                as="button"
                className="list-group-item list-group-item-action"
                disabled={false}
                eventKey={null}
                onClick={[Function]}
              >
                <button
                  className="list-group-item list-group-item-action"
                  data-rb-event-key={null}
                  disabled={false}
                  onClick={[Function]}
                >
                  <Title
                    body="Alpha"
                  >
                    <span
                      key="h-1"
                    >
                      Alpha
                    </span>
                  </Title>
                </button>
              </ForwardRef>
            </ListGroupItem>
            <ListGroupItem
              action={true}
              active={false}
              disabled={false}
              key="Bravo"
              onClick={[Function]}
            >
              <ForwardRef
                as="button"
                className="list-group-item list-group-item-action"
                disabled={false}
                eventKey={null}
                onClick={[Function]}
              >
                <button
                  className="list-group-item list-group-item-action"
                  data-rb-event-key={null}
                  disabled={false}
                  onClick={[Function]}
                >
                  <Title
                    body="Bravo"
                  >
                    <span
                      key="h-1"
                    >
                      Bravo
                    </span>
                  </Title>
                </button>
              </ForwardRef>
            </ListGroupItem>
            <ListGroupItem
              action={true}
              active={false}
              disabled={false}
              key="Charlie"
              onClick={[Function]}
            >
              <ForwardRef
                as="button"
                className="list-group-item list-group-item-action"
                disabled={false}
                eventKey={null}
                onClick={[Function]}
              >
                <button
                  className="list-group-item list-group-item-action"
                  data-rb-event-key={null}
                  disabled={false}
                  onClick={[Function]}
                >
                  <Title
                    body="Charlie"
                  >
                    <span
                      key="h-1"
                    >
                      Charlie
                    </span>
                  </Title>
                </button>
              </ForwardRef>
            </ListGroupItem>
          </div>
        </ForwardRef>
      </ListGroup>
    </Suggestions>
  </FormulaInput>
</Component>
`;

exports[`FormulaInput suggests when the user starts typing 3`] = `
<Component>
  <FormulaInput
    getSuggestions={[Function]}
    onChange={[Function]}
    value="Alpha"
  >
    <FormControl
      autoComplete="off"
      name="formula"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      value="Alpha"
    >
      <input
        autoComplete="off"
        className="form-control"
        name="formula"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        value="Alpha"
      />
    </FormControl>
  </FormulaInput>
</Component>
`;

exports[`FormulaInput suggests when the user starts typing 4`] = `
<Component>
  <FormulaInput
    getSuggestions={[Function]}
    onChange={[Function]}
    value="Alpha + Charlie"
  >
    <FormControl
      autoComplete="off"
      name="formula"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      value="Alpha + Charlie"
    >
      <input
        autoComplete="off"
        className="form-control"
        name="formula"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        value="Alpha + Charlie"
      />
    </FormControl>
  </FormulaInput>
</Component>
`;
